--- a/client/src/components/NavigationBar/module.css
+++ b/client/src/components/NavigationBar/module.css
@@ -2,19 +2,19 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600&display=swap");
 /* Defino variables de colores para utilizar  */
 :root {
-  --color-1: #ffcb05;
-  --color-2: #ee8130;
-  --color-3: #64b3e9;
-  --color-4: #8bbe8a;
-  --color-5: #be3829;
-  --color-6: #fff;
+  --color-verde-claro: #8bc34a;
+  --color-blanco: #ffffff;
+  --color-gris-claro: #9e9e9e;
+  --color-gris-op: #9e9e9eab;
+  --color-naranja: #ff5722;
+  --color-azul-oscuro: #263238;
 }
 /* Navbar */
 ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
-  background-color: black;
+  background-color: rgba(0, 0, 0, 0.5);
   position: fixed;
   top: 0;
   width: 100%;
@@ -36,7 +36,8 @@ li a,
 li a:hover {
   background-color: rgba(255, 255, 255, 0.15);
   text-decoration: underline;
-  color: var(--color-3);
+  color: var(--color-naranja);
+  text-shadow: 1px 1px black;
   font-weight: bold;
 }
 
@@ -64,7 +65,7 @@ li a:hover {
 
 .dropdown:hover .dropbtn {
   cursor: pointer;
-  color: var(--color-4);
+  color: var(--color-naranja);
   text-decoration: underline;
   font-weight: bold;
   text-shadow: 1px 1px black;
@@ -100,8 +101,6 @@ li a:hover {
 .dropdown:hover .dropdown-content {
   display: block;
 }
-
-/* Tipos */
 
 .dropdownTypes {
   display: none;
