--- a/client/src/components/RecipeCardContainer/module.css
+++ b/client/src/components/RecipeCardContainer/module.css
@@ -4,7 +4,8 @@
   flex-wrap: wrap;
   justify-content: space-evenly;
   border-radius: 2%;
-  margin: 100px 0 50px 0;
+  margin: 5px 0 5px 0;
   padding-bottom: 20px;
-  /* background-color: rgba(255, 255, 255, 0.1); */
+  position: fixed;
+  background-color: rgba(0, 0, 0, 0.15);
 }
