--- a/client/src/components/NavigationBar/module.css
+++ b/client/src/components/NavigationBar/module.css
@@ -14,7 +14,7 @@ ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: var(--color-azul-oscuro);
   position: fixed;
   top: 0;
   width: 100%;
