--- a/client/src/components/RecipeCard/module.css
+++ b/client/src/components/RecipeCard/module.css
@@ -6,6 +6,11 @@
   --color-4: #8bbe8a;
   --color-5: #be3829;
   --color-6: #fff;
+  --color-8: #8bc34a;
+  --color-11: #ffffff;
+  --color-10: #9e9e9e;
+  --color-9: #ff5722;
+  --color-7: #263238;
 }
 
 .cardContainer {
@@ -69,9 +74,15 @@
   padding: 0px 5px 0px 5px;
   display: flex;
   justify-content: space-evenly;
+  flex-direction: row;
 }
 
 .dietsWrapper {
+  font-size: xx-small;
   display: flex;
-  justify-content: center;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+}
+img {
+  border-radius: 15px;
 }
