--- a/client/src/components/RecipeCardContainer/module.css
+++ b/client/src/components/RecipeCardContainer/module.css
@@ -1,11 +1,11 @@
 .mainCard {
   width: 100%;
   display: flex;
+  flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-evenly;
   border-radius: 2%;
   margin: 5px 0 5px 0;
   padding-bottom: 20px;
-  position: fixed;
-  background-color: rgba(0, 0, 0, 0.15);
+  /* background-color: rgba(0, 0, 0, 0.15); */
 }
