--- a/client/src/views/About/module.css
+++ b/client/src/views/About/module.css
@@ -28,6 +28,7 @@
   border-radius: 15px;
   margin-top: 15px;
   margin-bottom: 15px;
+  padding: 0 50px 50px 50px;
 }
 .socialMedia {
   background-color: rgba(255, 255, 255, 0.5);
