--- a/client/src/views/LandingPage/module.css
+++ b/client/src/views/LandingPage/module.css
@@ -1,4 +1,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto+Slab:wght@500&display=swap");
+:root {
+  --color-verde-claro: #8bc34a;
+  --color-blanco: #ffffff;
+  --color-gris-claro: #9e9e9e;
+  --color-gris-op: #9e9e9eab;
+  --color-naranja: #ff5722;
+  --color-azul-oscuro: #263238;
+}
+
 .container {
   background-color: rgba(255, 255, 255, 0.231);
   display: flex;
@@ -49,22 +58,23 @@
 .ov {
   background: rgba(255, 255, 255, 0.231); /* color de fondo */
   color: black; /* color de fuente */
-  border: 2px solid black; /* tamaño y color de borde */
+  border: 2px solid var(--color-azul-oscuro); /*tamaño y color de borde */
   padding: 16px 20px;
   text-decoration: none;
-  border-radius: 3px; /* redondear bordes */
+  border-radius: 10px; /* redondear bordes 3 */
   position: relative;
   z-index: 1;
   overflow: hidden;
   display: inline-block;
   margin-bottom: 50px;
+  font-weight: bolder;
 }
 .ov:hover {
   color: #fff; /* color de fuente hover */
 }
 .ov::after {
   content: "";
-  background: rgba(0, 0, 0, 0.623); /* color de fondo hover */
+  background: var(--color-naranja); /* color de fondo hover */
   position: absolute;
   z-index: -1;
   padding: 16px 20px;
