--- a/client/src/components/RecipeCardContainer/module.css
+++ b/client/src/components/RecipeCardContainer/module.css
@@ -1,11 +1,10 @@
 .mainCard {
   width: 100%;
+  margin-top: -25px;
+  padding-top: 40px;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-evenly;
-  border-radius: 2%;
-  margin: 5px 0 5px 0;
-  padding-bottom: 20px;
-  /* background-color: rgba(0, 0, 0, 0.15); */
+  background-color: rgba(255, 255, 255, 0.4);
 }
