--- a/client/src/components/NavigationBar/module.css
+++ b/client/src/components/NavigationBar/module.css
@@ -102,7 +102,7 @@ li a:hover {
   display: block;
 }
 
-.dropdownTypes {
+/* .dropdownTypes {
   display: none;
   position: absolute;
   border-radius: 5px;
@@ -128,8 +128,12 @@ li a:hover {
 .dropdownTypes a:hover {
   text-shadow: 1px 1px black;
   background-color: #dddddd44;
-}
+} */
 
 .dropdown:hover .dropdownTypes {
   display: block;
+}
+
+.landingButton {
+  float: right;
 }
