--- a/client/src/views/LandingPage/module.css
+++ b/client/src/views/LandingPage/module.css
@@ -9,7 +9,10 @@
 }
 
 .container {
-  background-color: rgba(255, 255, 255, 0.231);
+  /* background-color: rgba(255, 255, 255, 0.231); */
+
+  background-image: url("../../assets/Backgrounds/backgroundLanding.png");
+  background-size: cover;
   display: flex;
   position: fixed;
   width: 100%;
@@ -35,7 +38,8 @@
   gap: 30px;
   font-family: "Roboto Slab", serif;
   font-size: 20px;
-  color: black;
+  color: var(--color-blanco);
+  text-shadow: 2px 2px #303030;
   background-color: rgba(255, 255, 255, 0.231);
   padding: 10px 50px 50px 50px;
   margin: auto;
@@ -56,9 +60,13 @@
 
 /*** ESTILOS BOTÓN SLIDE RIGHT ***/
 .ov {
-  background: rgba(255, 255, 255, 0.231); /* color de fondo */
-  color: black; /* color de fuente */
-  border: 2px solid var(--color-azul-oscuro); /*tamaño y color de borde */
+  background-color: rgba(255, 255, 255, 0.231); /* color de fondo */
+  box-shadow: 0 0 1rem 0 rgba(0, 0, 0, 0.2);
+  background-color: rgba(255, 255, 255, 0.15);
+  backdrop-filter: blur(5px);
+  color: var(--color-blanco); /* color de fuente */
+  text-shadow: 2px 2px #303030;
+  border: 1px solid var(--color-azul-oscuro); /*tamaño y color de borde */
   padding: 16px 20px;
   text-decoration: none;
   border-radius: 10px; /* redondear bordes 3 */
