--- a/client/src/components/NavigationBar/module.css
+++ b/client/src/components/NavigationBar/module.css
@@ -10,10 +10,8 @@
   --color-azul-oscuro: #263238;
 }
 /* Navbar */
-ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
+.navbar {
+  overflow: hidden;
   background-color: var(--color-azul-oscuro);
   position: fixed;
   top: 0;
@@ -21,19 +19,16 @@ ul {
   z-index: 2;
   font-family: "Montserrat", sans-serif;
 }
-li {
-  float: left;
-}
 
-li a,
-.typeSelect {
-  display: block;
+.navbar a {
+  float: left;
+  font-size: 16px;
   color: white;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
 }
-li a:hover {
+.navbar a:hover {
   background-color: rgba(255, 255, 255, 0.15);
   text-decoration: underline;
   color: var(--color-naranja);
@@ -49,6 +44,7 @@ li a:hover {
 /* Dropdown */
 
 .dropdown {
+  float: left;
   overflow: hidden;
 }
 
@@ -75,7 +71,7 @@ li a:hover {
 .dropdown-content {
   display: none;
   position: absolute;
-  min-width: 110px;
+  min-width: 160px;
   border-radius: 5px;
   text-shadow: 1px 1px black;
   background-color: rgba(0, 0, 0, 0.5);
@@ -86,12 +82,13 @@ li a:hover {
 }
 
 .dropdown-content a {
-  color: white;
   font-weight: bolder;
+  text-align: center;
+  float: none;
+  color: white;
   padding: 12px 16px;
   text-decoration: none;
   display: block;
-  text-align: center;
 }
 
 .dropdown-content a:hover {
@@ -102,38 +99,11 @@ li a:hover {
   display: block;
 }
 
-/* .dropdownTypes {
-  display: none;
-  position: absolute;
-  border-radius: 5px;
-  min-width: 110px;
-  background-color: rgba(0, 0, 0, 0.5);
-  -webkit-box-shadow: 3px 3px 3px 0px rgba(0, 0, 0, 0.75);
-  -moz-box-shadow: 3px 3px 3px 0px rgba(0, 0, 0, 0.75);
-  box-shadow: 3px 3px 3px 0px rgba(0, 0, 0, 0.75);
-  z-index: 1;
-}
-
-.dropdownTypes a {
-  color: white;
-  padding: 10px 10px;
-  font-family: "Montserrat", sans-serif;
-  text-decoration: none;
-  display: block;
-  text-align: center;
-  font-size: 12px;
-  font-weight: bolder;
-}
-
-.dropdownTypes a:hover {
-  text-shadow: 1px 1px black;
-  background-color: #dddddd44;
-} */
-
-.dropdown:hover .dropdownTypes {
-  display: block;
-}
-
-.landingButton {
+.landingButton a {
   float: right;
+  font-size: 16px;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
 }
