--- a/client/src/components/SearchBar/module.css
+++ b/client/src/components/SearchBar/module.css
@@ -2,8 +2,9 @@
 
 .searchBar button {
   float: right;
-  padding: 5px 5px 5px 0;
-  margin: 10px 0 10px 0;
+  padding: 5px 0 5px 0;
+  margin: 10px 10px 10px 0;
+  align-content: center;
   width: 33px;
   height: 33px;
   border-radius: 50%;
@@ -14,18 +15,7 @@
   background: #fff;
 }
 .searchBar button:hover {
-  background-color: #ffcb05;
-}
-
-#myInput {
-  background-image: url("/css/searchicon.png");
-  background-position: 10px 12px;
-  background-repeat: no-repeat;
-  font-size: 16px;
-  padding: 12px 20px 12px 40px;
-  border: 1px solid #ddd;
-  margin-bottom: 12px;
-  border-radius: 30px;
+  background-color: #8bc34a;
 }
 
 /* Input */
@@ -36,6 +26,7 @@
   margin: 10px;
   height: 32px;
   border: none;
+  float: right;
   border-radius: 30px;
   font-size: 17px;
   color: black;
